objects/Time__c.object
<CustomObject>
    <label>Time</label>
    <nameField>
        <displayFormat>TME-{00000000}</displayFormat>
        <label>Time</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Day__c</fullName>
        <formula>TEXT(DAY(Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTE__c</fullName>
        <formula>Hours__c / 2080</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Times</relationshipLabel>
        <relationshipName>Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PM_Time_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>IF(
  CEILING((Date__c - DATE(YEAR(Date__c), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING((Date__c - DATE(YEAR(Date__c), 1, 1) + 1) / 7)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR(Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <formula>CASE(
    Type__c,
    &quot;Budget&quot;, Budget_hrs__c,
    &quot;Available&quot;, Available_hrs__c,
    &quot;Target&quot;, Planned_hrs__c, /* Assuming Target is similar to Planned__c, you can update this as needed */
    &quot;Planned&quot;, Planned_hrs__c,
    &quot;Billable&quot;, Billable_hrs__c,
    &quot;Non-Billable&quot;, Non_Billable_hrs__c,
    NULL 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(
  MONTH(Date__c), 
  1, &quot;January&quot;, 
  2, &quot;February&quot;, 
  3, &quot;March&quot;, 
  4, &quot;April&quot;, 
  5, &quot;May&quot;, 
  6, &quot;June&quot;, 
  7, &quot;July&quot;, 
  8, &quot;August&quot;, 
  9, &quot;September&quot;, 
  10, &quot;October&quot;, 
  11, &quot;November&quot;, 
  12, &quot;December&quot;, 
  &quot;Error&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Past__c</fullName>
        <formula>Date__c &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Past</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_ID__c</fullName>
        <formula>Role__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekday__c</fullName>
        <formula>CASE(
  WEEKDAY(Date__c), 
  1, &quot;Sunday&quot;, 
  2, &quot;Monday&quot;, 
  3, &quot;Tuesday&quot;, 
  4, &quot;Wednesday&quot;, 
  5, &quot;Thursday&quot;, 
  6, &quot;Friday&quot;, 
  7, &quot;Saturday&quot;, 
  &quot;Error&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekday</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PM_Time_Categories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Today__c</fullName>
        <formula>Date__c == TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipName>Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Future__c</fullName>
        <formula>Date__c &gt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Future</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_hrs__c</fullName>
        <label>Budget (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Weekday__c</fullName>
        <formula>!(WEEKDAY(Date__c) == 1 || WEEKDAY(Date__c) == 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Weekday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_hrs__c</fullName>
        <label>Target (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_hrs__c</fullName>
        <label>Planned (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource_ID__c</fullName>
        <formula>Resource__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_hrs__c</fullName>
        <label>Billable (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Date__c</fullName>
        <formula>Weekday__c &amp; &quot;, &quot; &amp; Month__c &amp; &quot; &quot; &amp; Day__c &amp; &quot;, &quot; &amp; Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Last_Week__c</fullName>
        <formula>WEEKDAY(Date__c) &gt;= 1 &amp;&amp; WEEKDAY(Date__c) &lt;= 7 &amp;&amp; Date__c &lt; TODAY() &amp;&amp; Date__c &gt;= (TODAY() - (7 - WEEKDAY(TODAY()) + 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Last Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Next_Week__c</fullName>
        <formula>Date__c &gt; TODAY() &amp;&amp; Date__c &lt;= (TODAY() + 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Next Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_This_Week__c</fullName>
        <formula>Date__c &gt;= (TODAY() - WEEKDAY(TODAY()) + 1) &amp;&amp; Date__c &lt; (TODAY() + (8 - WEEKDAY(TODAY())))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is This Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_This_Year__c</fullName>
        <formula>YEAR(Date__c) = YEAR(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is This Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Role</label>
        <referenceTo>Project_Role__c</referenceTo>
        <relationshipLabel>Times</relationshipLabel>
        <relationshipName>Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Times</relationshipLabel>
        <relationshipName>Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_hrs__c</fullName>
        <label>Available (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Last_Month__c</fullName>
        <formula>MONTH(Date__c) = MONTH(TODAY()) - 1 &amp;&amp; YEAR(Date__c) = YEAR(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Last Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Next_Month__c</fullName>
        <formula>MONTH(Date__c) = MONTH(TODAY()) + 1 &amp;&amp; YEAR(Date__c) = YEAR(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Next Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_This_Month__c</fullName>
        <formula>MONTH(Date__c) = MONTH(TODAY()) &amp;&amp; YEAR(Date__c) = YEAR(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is This Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Budget</label>
        <referenceTo>Project_Budget__c</referenceTo>
        <relationshipLabel>Times</relationshipLabel>
        <relationshipName>Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Billable_hrs__c</fullName>
        <label>Non-Billable (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Resource</label>
        <referenceTo>Project_Resource__c</referenceTo>
        <relationshipLabel>Times</relationshipLabel>
        <relationshipName>Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Today_and_Future__c</fullName>
        <formula>Is_Today__c || Is_Future__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today and Future</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weekday_Indicator__c</fullName>
        <formula>IF(
  OR(
    WEEKDAY(Date__c) = 1,  
    WEEKDAY(Date__c) = 7   
  ),
  IMAGE(&quot;/resource/pm_images/path_light_gray.png&quot;, &quot;Weekend&quot;, 16, 64),  
  IMAGE(&quot;/resource/pm_images/path_dark_purple.png&quot;, &quot;Weekday&quot;, 16, 64)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekday Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Formatted_Text__c</fullName>
        <formula>TEXT(YEAR(Date__c)) &amp; &quot;-&quot; &amp; 
LPAD(TEXT(MONTH(Date__c)), 2, &quot;0&quot;) &amp; &quot;-&quot; &amp; 
LPAD(TEXT(DAY(Date__c)), 2, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Formatted Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Future_and_Today__c</fullName>
        <formula>Date__c &gt;= TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Future and Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_vs_Planned_hrs__c</fullName>
        <formula>Budget_hrs__c - Planned_hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This measures the variance between budgeted hours and planned hours, offering insight into whether planned work aligns with the allocated budget. A positive result indicates underutilization of the budget, while a negative result suggests the plan exceeds the budget.</inlineHelpText>
        <label>Budget vs Planned (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_vs_Billable_hrs__c</fullName>
        <description>This compares the target billable hours with the actual billable hours, showing whether your team is meeting its billing goals. A positive number indicates that billing is falling short of targets, while a negative value suggests billing is exceeding expectations.</description>
        <formula>Target_hrs__c - Billable_hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target vs Billable (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_vs_Billable_hrs__c</fullName>
        <description>This tracks how much of the planned hours have translated into billable time. A positive value shows a gap between planned work and billable time, while a negative value indicates more billable hours than originally planned.</description>
        <formula>Planned_hrs__c - Billable_hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned vs Billable (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_User_is_Resource__c</fullName>
        <formula>$User.Id == Resource__r.User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User is Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_vs_Available_hrs__c</fullName>
        <description>This shows the difference between planned hours and available hours, indicating whether resources are overbooked (positive result) or underutilized (negative result).</description>
        <formula>Planned_hrs__c - Available_hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned vs Available (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_vs_Non_Billable_hrs__c</fullName>
        <description>Description: This highlights how many of the planned hours have been spent on non-billable tasks. A positive result indicates an efficient use of planned time, while a negative value suggests non-billable tasks have consumed more time than planned.</description>
        <formula>Planned_hrs__c - Non_Billable_hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned vs Non-Billable (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Only_the_hours_field_matching_the_select</fullName>
        <active>true</active>
        <errorConditionFormula>!Bypass_Validation__c &amp;&amp; (
    ISCHANGED(Date__c) || 
    ISCHANGED(Type__c) || 
    ISCHANGED(Project__c) || 
    ISCHANGED(Project_Budget__c) || 
    ISCHANGED(Project_Resource__c) || 
    ISCHANGED(Project_Task__c) || 
    ISCHANGED(Project_Role__c) || 
    ISCHANGED(Resource__c) || 
    ISCHANGED(Role__c)
)</errorConditionFormula>
        <errorMessage>Only the hours field matching the selected type can be changed. All other fields are not editable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_the_relevant_field_may_be_populated</fullName>
        <active>true</active>
        <errorConditionFormula>!Bypass_Validation__c &amp;&amp; (
    /* If Type is Budget, ensure only Budget_hrs__c is populated */
    (ISPICKVAL(Type__c, &quot;Budget&quot;) &amp;&amp; 
        (NOT(ISNULL(Available_hrs__c)) || NOT(ISNULL(Billable_hrs__c)) || NOT(ISNULL(Non_Billable_hrs__c)) || NOT(ISNULL(Planned_hrs__c)))
    ) ||
    /* If Type is Available, ensure only Available_hrs__c is populated */
    (ISPICKVAL(Type__c, &quot;Available&quot;) &amp;&amp; 
        (NOT(ISNULL(Budget_hrs__c)) || NOT(ISNULL(Billable_hrs__c)) || NOT(ISNULL(Non_Billable_hrs__c)) || NOT(ISNULL(Planned_hrs__c)))
    ) ||
    /* If Type is Planned, ensure only Planned__c is populated */
    (ISPICKVAL(Type__c, &quot;Planned&quot;) &amp;&amp; 
        (NOT(ISNULL(Available_hrs__c)) || NOT(ISNULL(Billable_hrs__c)) || NOT(ISNULL(Non_Billable_hrs__c)) || NOT(ISNULL(Budget_hrs__c)))
    ) ||
    /* If Type is Billable, ensure only Billable_hrs__c is populated */
    (ISPICKVAL(Type__c, &quot;Billable&quot;) &amp;&amp; 
        (NOT(ISNULL(Available_hrs__c)) || NOT(ISNULL(Budget_hrs__c)) || NOT(ISNULL(Non_Billable_hrs__c)) || NOT(ISNULL(Planned_hrs__c)))
    ) ||
    /* If Type is Non-Billable, ensure only Non_Billable__c is populated */
    (ISPICKVAL(Type__c, &quot;Non-Billable&quot;) &amp;&amp; 
        (NOT(ISNULL(Available_hrs__c)) || NOT(ISNULL(Budget_hrs__c)) || NOT(ISNULL(Billable_hrs__c)) || NOT(ISNULL(Planned_hrs__c)))
    )
)</errorConditionFormula>
        <errorMessage>Only the relevant field may be populated based on the selected Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>You_can_only_update_the_hours_field_that</fullName>
        <active>true</active>
        <errorConditionFormula>!Bypass_Validation__c &amp;&amp; (
    ISCHANGED(Target_hrs__c) &amp;&amp; NOT(ISPICKVAL(Type__c, &quot;Target&quot;)) ||
    ISCHANGED(Available_hrs__c) &amp;&amp; NOT(ISPICKVAL(Type__c, &quot;Available&quot;)) ||
    ISCHANGED(Billable_hrs__c) &amp;&amp; NOT(ISPICKVAL(Type__c, &quot;Billable&quot;)) ||
    ISCHANGED(Budget_hrs__c) &amp;&amp; NOT(ISPICKVAL(Type__c, &quot;Budget&quot;)) ||
    ISCHANGED(Non_Billable_hrs__c) &amp;&amp; NOT(ISPICKVAL(Type__c, &quot;Non-Billable&quot;)) ||
    ISCHANGED(Planned_hrs__c) &amp;&amp; NOT(ISPICKVAL(Type__c, &quot;Planned&quot;))
)</errorConditionFormula>
        <errorMessage>You can only update the hours field that matches the selected type.</errorMessage>
    </validationRules>
</CustomObject>